@startuml
enum SatelliteType {
    Core,
    Engine,
    Parachute,
}
class SatellitePart {
    + satelliteName : string
    + Push(dir:Vector3) : void
    + Rotate(dir:Vector3) : void
    + GenerateJoint() : void
    + GetPartName() : void
    + Separate(partName:string) : void
    + Separate(separateAll:bool) : void
}
class "List`1"<T> {
}
AstralBody <|-- SatellitePart
SatellitePart o-> "connectedPartList<SatellitePart>" "List`1"
SatellitePart --> "PartType" SatelliteType
@enduml
